Entrega3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program
Rule 2     create_dirfunc -> <empty>
Rule 3     create_id -> <empty>
Rule 4     clean_program -> <empty>
Rule 5     declarations -> vars
Rule 6     declarations -> empty
Rule 7     functions -> funcs functions
Rule 8     functions -> empty
Rule 9     vars -> VAR var_declaration var_declaration_list
Rule 10    var_declaration -> identifier_list COLON type SEMICOLON
Rule 11    identifier_list -> ID add_to_var_table identifier_list_tail
Rule 12    identifier_list_tail -> COMMA ID add_to_var_table identifier_list_tail
Rule 13    identifier_list_tail -> empty
Rule 14    add_to_var_table -> <empty>
Rule 15    var_declaration_list -> var_declaration var_declaration_list
Rule 16    var_declaration_list -> empty
Rule 17    type -> INT_TYPE current_type
Rule 18    type -> FLOAT_TYPE current_type
Rule 19    current_type -> <empty>
Rule 20    body -> LBRACES statement_list RBRACES
Rule 21    statement_list -> statement statement_list
Rule 22    statement_list -> empty
Rule 23    statement -> print_func
Rule 24    statement -> condition
Rule 25    statement -> cycle
Rule 26    statement -> RETURN expression
Rule 27    statement -> ID id_option
Rule 28    statement -> LBRACKETS statement_list RBRACKETS
Rule 29    id_option -> f_call SEMICOLON
Rule 30    id_option -> assign
Rule 31    print_func -> PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
Rule 32    print_element -> expression
Rule 33    print_element -> CTE_STRING
Rule 34    print_element_list -> COMMA print_element print_element_list
Rule 35    print_element_list -> empty
Rule 36    assign -> EQUALS expression SEMICOLON generate_assign_quad
Rule 37    generate_assign_quad -> <empty>
Rule 38    cycle -> WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON
Rule 39    condition -> IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
Rule 40    else_part -> ELSE body
Rule 41    else_part -> empty
Rule 42    expression -> exp comparison
Rule 43    comparison -> GREATER add_op exp
Rule 44    comparison -> LESS add_op exp
Rule 45    comparison -> DIFFERENT add_op exp
Rule 46    comparison -> STRICT_EQUAL add_op exp
Rule 47    comparison -> empty
Rule 48    exp -> term add_sub
Rule 49    add_sub -> PLUS add_op term add_sub
Rule 50    add_sub -> MINUS add_op term add_sub
Rule 51    add_sub -> empty
Rule 52    term -> factor mult_div
Rule 53    mult_div -> TIMES add_op factor mult_div
Rule 54    mult_div -> DIVIDE add_op factor mult_div
Rule 55    mult_div -> empty
Rule 56    factor -> grouping
Rule 57    factor -> unary_sign
Rule 58    factor -> cte
Rule 59    factor -> ID id_func_option
Rule 60    id_func_option -> f_call
Rule 61    id_func_option -> empty
Rule 62    grouping -> LPARENTESIS push_paren expression RPARENTESIS close_paren
Rule 63    push_paren -> <empty>
Rule 64    close_paren -> <empty>
Rule 65    unary_sign -> PLUS value
Rule 66    unary_sign -> MINUS value
Rule 67    value -> ID
Rule 68    value -> cte
Rule 69    cte -> CTE_INT
Rule 70    cte -> CTE_FLOAT
Rule 71    funcs -> prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
Rule 72    prepare_new_func -> <empty>
Rule 73    funcs_type -> VOID
Rule 74    funcs_type -> type
Rule 75    add_current_type -> <empty>
Rule 76    add_function -> <empty>
Rule 77    start_func_vars -> <empty>
Rule 78    end_func -> <empty>
Rule 79    parameters -> parameter parameter_list
Rule 80    parameters -> empty
Rule 81    parameter -> ID COLON type
Rule 82    parameter_list -> COMMA parameter parameter_list
Rule 83    parameter_list -> empty
Rule 84    function_block -> vars body
Rule 85    function_block -> body
Rule 86    f_call -> LPARENTESIS arguments RPARENTESIS
Rule 87    arguments -> expression argument_list
Rule 88    arguments -> empty
Rule 89    argument_list -> COMMA expression argument_list
Rule 90    argument_list -> empty
Rule 91    empty -> <empty>
Rule 92    add_op -> <empty>

Terminals, with rules where they appear

COLON                : 10 81
COMMA                : 12 34 82 89
CTE_FLOAT            : 70
CTE_INT              : 69
CTE_STRING           : 33
DIFFERENT            : 45
DIVIDE               : 54
DO                   : 38
ELSE                 : 40
END                  : 1
EQUALS               : 36
FLOAT_TYPE           : 18
GREATER              : 43
ID                   : 1 11 12 27 59 67 71 81
IF                   : 39
INT_TYPE             : 17
LBRACES              : 20 71
LBRACKETS            : 28
LESS                 : 44
LPARENTESIS          : 31 38 39 62 71 86
MAIN                 : 1
MINUS                : 50 66
PLUS                 : 49 65
PRINT                : 31
PROGRAM              : 1
RBRACES              : 20 71
RBRACKETS            : 28
RETURN               : 26
RPARENTESIS          : 31 38 39 62 71 86
SEMICOLON            : 1 10 29 31 36 38 39 71
STRICT_EQUAL         : 46
TIMES                : 53
VAR                  : 9
VOID                 : 73
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

add_current_type     : 71
add_function         : 71
add_op               : 43 44 45 46 49 50 53 54
add_sub              : 48 49 50
add_to_var_table     : 11 12
argument_list        : 87 89
arguments            : 86
assign               : 30
body                 : 1 38 39 40 84 85
clean_program        : 1
close_paren          : 62
comparison           : 42
condition            : 24
create_dirfunc       : 1
create_id            : 1
cte                  : 58 68
current_type         : 17 18
cycle                : 25
declarations         : 1
else_part            : 39
empty                : 6 8 13 16 22 35 41 47 51 55 61 80 83 88 90
end_func             : 71
exp                  : 42 43 44 45 46
expression           : 26 32 36 38 39 62 87 89
f_call               : 29 60
factor               : 52 53 54
funcs                : 7
funcs_type           : 71
function_block       : 71
functions            : 1 7
generate_assign_quad : 36
grouping             : 56
id_func_option       : 59
id_option            : 27
identifier_list      : 10
identifier_list_tail : 11 12
mult_div             : 52 53 54
parameter            : 79 82
parameter_list       : 79 82
parameters           : 71
prepare_new_func     : 71
print_element        : 31 34
print_element_list   : 31 34
print_func           : 23
program              : 0
push_paren           : 62
start_func_vars      : 71
statement            : 21
statement_list       : 20 21 28
term                 : 48 49 50
type                 : 10 74 81
unary_sign           : 57
value                : 65 66
var_declaration      : 9 15
var_declaration_list : 9 15
vars                 : 5 84

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program
    (2) create_dirfunc -> .

    ID              reduce using rule 2 (create_dirfunc -> .)

    create_dirfunc                 shift and go to state 3

state 3

    (1) program -> PROGRAM create_dirfunc . ID create_id SEMICOLON declarations functions MAIN body END clean_program

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM create_dirfunc ID . create_id SEMICOLON declarations functions MAIN body END clean_program
    (3) create_id -> .

    SEMICOLON       reduce using rule 3 (create_id -> .)

    create_id                      shift and go to state 5

state 5

    (1) program -> PROGRAM create_dirfunc ID create_id . SEMICOLON declarations functions MAIN body END clean_program

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON . declarations functions MAIN body END clean_program
    (5) declarations -> . vars
    (6) declarations -> . empty
    (9) vars -> . VAR var_declaration var_declaration_list
    (91) empty -> .

    VAR             shift and go to state 10
    MAIN            reduce using rule 91 (empty -> .)
    VOID            reduce using rule 91 (empty -> .)
    INT_TYPE        reduce using rule 91 (empty -> .)
    FLOAT_TYPE      reduce using rule 91 (empty -> .)

    declarations                   shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 9

state 7

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations . functions MAIN body END clean_program
    (7) functions -> . funcs functions
    (8) functions -> . empty
    (71) funcs -> . prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (91) empty -> .
    (72) prepare_new_func -> .

    MAIN            reduce using rule 91 (empty -> .)
    VOID            reduce using rule 72 (prepare_new_func -> .)
    INT_TYPE        reduce using rule 72 (prepare_new_func -> .)
    FLOAT_TYPE      reduce using rule 72 (prepare_new_func -> .)

    functions                      shift and go to state 11
    funcs                          shift and go to state 12
    empty                          shift and go to state 13
    prepare_new_func               shift and go to state 14

state 8

    (5) declarations -> vars .

    MAIN            reduce using rule 5 (declarations -> vars .)
    VOID            reduce using rule 5 (declarations -> vars .)
    INT_TYPE        reduce using rule 5 (declarations -> vars .)
    FLOAT_TYPE      reduce using rule 5 (declarations -> vars .)


state 9

    (6) declarations -> empty .

    MAIN            reduce using rule 6 (declarations -> empty .)
    VOID            reduce using rule 6 (declarations -> empty .)
    INT_TYPE        reduce using rule 6 (declarations -> empty .)
    FLOAT_TYPE      reduce using rule 6 (declarations -> empty .)


state 10

    (9) vars -> VAR . var_declaration var_declaration_list
    (10) var_declaration -> . identifier_list COLON type SEMICOLON
    (11) identifier_list -> . ID add_to_var_table identifier_list_tail

    ID              shift and go to state 17

    var_declaration                shift and go to state 15
    identifier_list                shift and go to state 16

state 11

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions . MAIN body END clean_program

    MAIN            shift and go to state 18


state 12

    (7) functions -> funcs . functions
    (7) functions -> . funcs functions
    (8) functions -> . empty
    (71) funcs -> . prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (91) empty -> .
    (72) prepare_new_func -> .

    MAIN            reduce using rule 91 (empty -> .)
    VOID            reduce using rule 72 (prepare_new_func -> .)
    INT_TYPE        reduce using rule 72 (prepare_new_func -> .)
    FLOAT_TYPE      reduce using rule 72 (prepare_new_func -> .)

    funcs                          shift and go to state 12
    functions                      shift and go to state 19
    empty                          shift and go to state 13
    prepare_new_func               shift and go to state 14

state 13

    (8) functions -> empty .

    MAIN            reduce using rule 8 (functions -> empty .)


state 14

    (71) funcs -> prepare_new_func . funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (73) funcs_type -> . VOID
    (74) funcs_type -> . type
    (17) type -> . INT_TYPE current_type
    (18) type -> . FLOAT_TYPE current_type

    VOID            shift and go to state 21
    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24

    funcs_type                     shift and go to state 20
    type                           shift and go to state 22

state 15

    (9) vars -> VAR var_declaration . var_declaration_list
    (15) var_declaration_list -> . var_declaration var_declaration_list
    (16) var_declaration_list -> . empty
    (10) var_declaration -> . identifier_list COLON type SEMICOLON
    (91) empty -> .
    (11) identifier_list -> . ID add_to_var_table identifier_list_tail

    MAIN            reduce using rule 91 (empty -> .)
    VOID            reduce using rule 91 (empty -> .)
    INT_TYPE        reduce using rule 91 (empty -> .)
    FLOAT_TYPE      reduce using rule 91 (empty -> .)
    LBRACES         reduce using rule 91 (empty -> .)
    ID              shift and go to state 17

    var_declaration                shift and go to state 25
    var_declaration_list           shift and go to state 26
    empty                          shift and go to state 27
    identifier_list                shift and go to state 16

state 16

    (10) var_declaration -> identifier_list . COLON type SEMICOLON

    COLON           shift and go to state 28


state 17

    (11) identifier_list -> ID . add_to_var_table identifier_list_tail
    (14) add_to_var_table -> .

    COMMA           reduce using rule 14 (add_to_var_table -> .)
    COLON           reduce using rule 14 (add_to_var_table -> .)

    add_to_var_table               shift and go to state 29

state 18

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN . body END clean_program
    (20) body -> . LBRACES statement_list RBRACES

    LBRACES         shift and go to state 31

    body                           shift and go to state 30

state 19

    (7) functions -> funcs functions .

    MAIN            reduce using rule 7 (functions -> funcs functions .)


state 20

    (71) funcs -> prepare_new_func funcs_type . add_current_type ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (75) add_current_type -> .

    ID              reduce using rule 75 (add_current_type -> .)

    add_current_type               shift and go to state 32

state 21

    (73) funcs_type -> VOID .

    ID              reduce using rule 73 (funcs_type -> VOID .)


state 22

    (74) funcs_type -> type .

    ID              reduce using rule 74 (funcs_type -> type .)


state 23

    (17) type -> INT_TYPE . current_type
    (19) current_type -> .

    ID              reduce using rule 19 (current_type -> .)
    SEMICOLON       reduce using rule 19 (current_type -> .)
    COMMA           reduce using rule 19 (current_type -> .)
    RPARENTESIS     reduce using rule 19 (current_type -> .)

    current_type                   shift and go to state 33

state 24

    (18) type -> FLOAT_TYPE . current_type
    (19) current_type -> .

    ID              reduce using rule 19 (current_type -> .)
    SEMICOLON       reduce using rule 19 (current_type -> .)
    COMMA           reduce using rule 19 (current_type -> .)
    RPARENTESIS     reduce using rule 19 (current_type -> .)

    current_type                   shift and go to state 34

state 25

    (15) var_declaration_list -> var_declaration . var_declaration_list
    (15) var_declaration_list -> . var_declaration var_declaration_list
    (16) var_declaration_list -> . empty
    (10) var_declaration -> . identifier_list COLON type SEMICOLON
    (91) empty -> .
    (11) identifier_list -> . ID add_to_var_table identifier_list_tail

    MAIN            reduce using rule 91 (empty -> .)
    VOID            reduce using rule 91 (empty -> .)
    INT_TYPE        reduce using rule 91 (empty -> .)
    FLOAT_TYPE      reduce using rule 91 (empty -> .)
    LBRACES         reduce using rule 91 (empty -> .)
    ID              shift and go to state 17

    var_declaration                shift and go to state 25
    var_declaration_list           shift and go to state 35
    empty                          shift and go to state 27
    identifier_list                shift and go to state 16

state 26

    (9) vars -> VAR var_declaration var_declaration_list .

    MAIN            reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    VOID            reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    INT_TYPE        reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    FLOAT_TYPE      reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)
    LBRACES         reduce using rule 9 (vars -> VAR var_declaration var_declaration_list .)


state 27

    (16) var_declaration_list -> empty .

    MAIN            reduce using rule 16 (var_declaration_list -> empty .)
    VOID            reduce using rule 16 (var_declaration_list -> empty .)
    INT_TYPE        reduce using rule 16 (var_declaration_list -> empty .)
    FLOAT_TYPE      reduce using rule 16 (var_declaration_list -> empty .)
    LBRACES         reduce using rule 16 (var_declaration_list -> empty .)


state 28

    (10) var_declaration -> identifier_list COLON . type SEMICOLON
    (17) type -> . INT_TYPE current_type
    (18) type -> . FLOAT_TYPE current_type

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24

    type                           shift and go to state 36

state 29

    (11) identifier_list -> ID add_to_var_table . identifier_list_tail
    (12) identifier_list_tail -> . COMMA ID add_to_var_table identifier_list_tail
    (13) identifier_list_tail -> . empty
    (91) empty -> .

    COMMA           shift and go to state 38
    COLON           reduce using rule 91 (empty -> .)

    identifier_list_tail           shift and go to state 37
    empty                          shift and go to state 39

state 30

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body . END clean_program

    END             shift and go to state 40


state 31

    (20) body -> LBRACES . statement_list RBRACES
    (21) statement_list -> . statement statement_list
    (22) statement_list -> . empty
    (23) statement -> . print_func
    (24) statement -> . condition
    (25) statement -> . cycle
    (26) statement -> . RETURN expression
    (27) statement -> . ID id_option
    (28) statement -> . LBRACKETS statement_list RBRACKETS
    (91) empty -> .
    (31) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (39) condition -> . IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
    (38) cycle -> . WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    RETURN          shift and go to state 47
    ID              shift and go to state 48
    LBRACKETS       shift and go to state 49
    RBRACES         reduce using rule 91 (empty -> .)
    PRINT           shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52

    statement_list                 shift and go to state 41
    statement                      shift and go to state 42
    empty                          shift and go to state 43
    print_func                     shift and go to state 44
    condition                      shift and go to state 45
    cycle                          shift and go to state 46

state 32

    (71) funcs -> prepare_new_func funcs_type add_current_type . ID add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func

    ID              shift and go to state 53


state 33

    (17) type -> INT_TYPE current_type .

    ID              reduce using rule 17 (type -> INT_TYPE current_type .)
    SEMICOLON       reduce using rule 17 (type -> INT_TYPE current_type .)
    COMMA           reduce using rule 17 (type -> INT_TYPE current_type .)
    RPARENTESIS     reduce using rule 17 (type -> INT_TYPE current_type .)


state 34

    (18) type -> FLOAT_TYPE current_type .

    ID              reduce using rule 18 (type -> FLOAT_TYPE current_type .)
    SEMICOLON       reduce using rule 18 (type -> FLOAT_TYPE current_type .)
    COMMA           reduce using rule 18 (type -> FLOAT_TYPE current_type .)
    RPARENTESIS     reduce using rule 18 (type -> FLOAT_TYPE current_type .)


state 35

    (15) var_declaration_list -> var_declaration var_declaration_list .

    MAIN            reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    VOID            reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    INT_TYPE        reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    FLOAT_TYPE      reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)
    LBRACES         reduce using rule 15 (var_declaration_list -> var_declaration var_declaration_list .)


state 36

    (10) var_declaration -> identifier_list COLON type . SEMICOLON

    SEMICOLON       shift and go to state 54


state 37

    (11) identifier_list -> ID add_to_var_table identifier_list_tail .

    COLON           reduce using rule 11 (identifier_list -> ID add_to_var_table identifier_list_tail .)


state 38

    (12) identifier_list_tail -> COMMA . ID add_to_var_table identifier_list_tail

    ID              shift and go to state 55


state 39

    (13) identifier_list_tail -> empty .

    COLON           reduce using rule 13 (identifier_list_tail -> empty .)


state 40

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END . clean_program
    (4) clean_program -> .

    $end            reduce using rule 4 (clean_program -> .)

    clean_program                  shift and go to state 56

state 41

    (20) body -> LBRACES statement_list . RBRACES

    RBRACES         shift and go to state 57


state 42

    (21) statement_list -> statement . statement_list
    (21) statement_list -> . statement statement_list
    (22) statement_list -> . empty
    (23) statement -> . print_func
    (24) statement -> . condition
    (25) statement -> . cycle
    (26) statement -> . RETURN expression
    (27) statement -> . ID id_option
    (28) statement -> . LBRACKETS statement_list RBRACKETS
    (91) empty -> .
    (31) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (39) condition -> . IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
    (38) cycle -> . WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    RETURN          shift and go to state 47
    ID              shift and go to state 48
    LBRACKETS       shift and go to state 49
    RBRACES         reduce using rule 91 (empty -> .)
    RBRACKETS       reduce using rule 91 (empty -> .)
    PRINT           shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52

    statement                      shift and go to state 42
    statement_list                 shift and go to state 58
    empty                          shift and go to state 43
    print_func                     shift and go to state 44
    condition                      shift and go to state 45
    cycle                          shift and go to state 46

state 43

    (22) statement_list -> empty .

    RBRACES         reduce using rule 22 (statement_list -> empty .)
    RBRACKETS       reduce using rule 22 (statement_list -> empty .)


state 44

    (23) statement -> print_func .

    RETURN          reduce using rule 23 (statement -> print_func .)
    ID              reduce using rule 23 (statement -> print_func .)
    LBRACKETS       reduce using rule 23 (statement -> print_func .)
    PRINT           reduce using rule 23 (statement -> print_func .)
    IF              reduce using rule 23 (statement -> print_func .)
    WHILE           reduce using rule 23 (statement -> print_func .)
    RBRACES         reduce using rule 23 (statement -> print_func .)
    RBRACKETS       reduce using rule 23 (statement -> print_func .)


state 45

    (24) statement -> condition .

    RETURN          reduce using rule 24 (statement -> condition .)
    ID              reduce using rule 24 (statement -> condition .)
    LBRACKETS       reduce using rule 24 (statement -> condition .)
    PRINT           reduce using rule 24 (statement -> condition .)
    IF              reduce using rule 24 (statement -> condition .)
    WHILE           reduce using rule 24 (statement -> condition .)
    RBRACES         reduce using rule 24 (statement -> condition .)
    RBRACKETS       reduce using rule 24 (statement -> condition .)


state 46

    (25) statement -> cycle .

    RETURN          reduce using rule 25 (statement -> cycle .)
    ID              reduce using rule 25 (statement -> cycle .)
    LBRACKETS       reduce using rule 25 (statement -> cycle .)
    PRINT           reduce using rule 25 (statement -> cycle .)
    IF              reduce using rule 25 (statement -> cycle .)
    WHILE           reduce using rule 25 (statement -> cycle .)
    RBRACES         reduce using rule 25 (statement -> cycle .)
    RBRACKETS       reduce using rule 25 (statement -> cycle .)


state 47

    (26) statement -> RETURN . expression
    (42) expression -> . exp comparison
    (48) exp -> . term add_sub
    (52) term -> . factor mult_div
    (56) factor -> . grouping
    (57) factor -> . unary_sign
    (58) factor -> . cte
    (59) factor -> . ID id_func_option
    (62) grouping -> . LPARENTESIS push_paren expression RPARENTESIS close_paren
    (65) unary_sign -> . PLUS value
    (66) unary_sign -> . MINUS value
    (69) cte -> . CTE_INT
    (70) cte -> . CTE_FLOAT

    ID              shift and go to state 66
    LPARENTESIS     shift and go to state 67
    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    CTE_INT         shift and go to state 70
    CTE_FLOAT       shift and go to state 71

    expression                     shift and go to state 59
    exp                            shift and go to state 60
    term                           shift and go to state 61
    factor                         shift and go to state 62
    grouping                       shift and go to state 63
    unary_sign                     shift and go to state 64
    cte                            shift and go to state 65

state 48

    (27) statement -> ID . id_option
    (29) id_option -> . f_call SEMICOLON
    (30) id_option -> . assign
    (86) f_call -> . LPARENTESIS arguments RPARENTESIS
    (36) assign -> . EQUALS expression SEMICOLON generate_assign_quad

    LPARENTESIS     shift and go to state 75
    EQUALS          shift and go to state 76

    id_option                      shift and go to state 72
    f_call                         shift and go to state 73
    assign                         shift and go to state 74

state 49

    (28) statement -> LBRACKETS . statement_list RBRACKETS
    (21) statement_list -> . statement statement_list
    (22) statement_list -> . empty
    (23) statement -> . print_func
    (24) statement -> . condition
    (25) statement -> . cycle
    (26) statement -> . RETURN expression
    (27) statement -> . ID id_option
    (28) statement -> . LBRACKETS statement_list RBRACKETS
    (91) empty -> .
    (31) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (39) condition -> . IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
    (38) cycle -> . WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    RETURN          shift and go to state 47
    ID              shift and go to state 48
    LBRACKETS       shift and go to state 49
    RBRACKETS       reduce using rule 91 (empty -> .)
    PRINT           shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52

    statement_list                 shift and go to state 77
    statement                      shift and go to state 42
    empty                          shift and go to state 43
    print_func                     shift and go to state 44
    condition                      shift and go to state 45
    cycle                          shift and go to state 46

state 50

    (31) print_func -> PRINT . LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON

    LPARENTESIS     shift and go to state 78


state 51

    (39) condition -> IF . LPARENTESIS expression RPARENTESIS body else_part SEMICOLON

    LPARENTESIS     shift and go to state 79


state 52

    (38) cycle -> WHILE . LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    LPARENTESIS     shift and go to state 80


state 53

    (71) funcs -> prepare_new_func funcs_type add_current_type ID . add_function LPARENTESIS start_func_vars parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON end_func
    (76) add_function -> .

    LPARENTESIS     reduce using rule 76 (add_function -> .)

    add_function                   shift and go to state 81

state 54

    (10) var_declaration -> identifier_list COLON type SEMICOLON .

    ID              reduce using rule 10 (var_declaration -> identifier_list COLON type SEMICOLON .)
    MAIN            reduce using rule 10 (var_declaration -> identifier_list COLON type SEMICOLON .)
    VOID            reduce using rule 10 (var_declaration -> identifier_list COLON type SEMICOLON .)
    INT_TYPE        reduce using rule 10 (var_declaration -> identifier_list COLON type SEMICOLON .)
    FLOAT_TYPE      reduce using rule 10 (var_declaration -> identifier_list COLON type SEMICOLON .)
    LBRACES         reduce using rule 10 (var_declaration -> identifier_list COLON type SEMICOLON .)


state 55

    (12) identifier_list_tail -> COMMA ID . add_to_var_table identifier_list_tail
    (14) add_to_var_table -> .

    COMMA           reduce using rule 14 (add_to_var_table -> .)
    COLON           reduce using rule 14 (add_to_var_table -> .)

    add_to_var_table               shift and go to state 82

state 56

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program .

    $end            reduce using rule 1 (program -> PROGRAM create_dirfunc ID create_id SEMICOLON declarations functions MAIN body END clean_program .)


state 57

    (20) body -> LBRACES statement_list RBRACES .

    END             reduce using rule 20 (body -> LBRACES statement_list RBRACES .)
    ELSE            reduce using rule 20 (body -> LBRACES statement_list RBRACES .)
    SEMICOLON       reduce using rule 20 (body -> LBRACES statement_list RBRACES .)
    RBRACES         reduce using rule 20 (body -> LBRACES statement_list RBRACES .)


state 58

    (21) statement_list -> statement statement_list .

    RBRACES         reduce using rule 21 (statement_list -> statement statement_list .)
    RBRACKETS       reduce using rule 21 (statement_list -> statement statement_list .)


state 59

    (26) statement -> RETURN expression .

    RETURN          reduce using rule 26 (statement -> RETURN expression .)
    ID              reduce using rule 26 (statement -> RETURN expression .)
    LBRACKETS       reduce using rule 26 (statement -> RETURN expression .)
    PRINT           reduce using rule 26 (statement -> RETURN expression .)
    IF              reduce using rule 26 (statement -> RETURN expression .)
    WHILE           reduce using rule 26 (statement -> RETURN expression .)
    RBRACES         reduce using rule 26 (statement -> RETURN expression .)
    RBRACKETS       reduce using rule 26 (statement -> RETURN expression .)


state 60

    (42) expression -> exp . comparison
    (43) comparison -> . GREATER add_op exp
    (44) comparison -> . LESS add_op exp
    (45) comparison -> . DIFFERENT add_op exp
    (46) comparison -> . STRICT_EQUAL add_op exp
    (47) comparison -> . empty
    (91) empty -> .

    GREATER         shift and go to state 84
    LESS            shift and go to state 85
    DIFFERENT       shift and go to state 86
    STRICT_EQUAL    shift and go to state 87
    RETURN          reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    LBRACKETS       reduce using rule 91 (empty -> .)
    PRINT           reduce using rule 91 (empty -> .)
    IF              reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    RBRACES         reduce using rule 91 (empty -> .)
    RBRACKETS       reduce using rule 91 (empty -> .)
    COMMA           reduce using rule 91 (empty -> .)
    RPARENTESIS     reduce using rule 91 (empty -> .)
    SEMICOLON       reduce using rule 91 (empty -> .)

    comparison                     shift and go to state 83
    empty                          shift and go to state 88

state 61

    (48) exp -> term . add_sub
    (49) add_sub -> . PLUS add_op term add_sub
    (50) add_sub -> . MINUS add_op term add_sub
    (51) add_sub -> . empty
    (91) empty -> .

    PLUS            shift and go to state 90
    MINUS           shift and go to state 91
    GREATER         reduce using rule 91 (empty -> .)
    LESS            reduce using rule 91 (empty -> .)
    DIFFERENT       reduce using rule 91 (empty -> .)
    STRICT_EQUAL    reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    LBRACKETS       reduce using rule 91 (empty -> .)
    PRINT           reduce using rule 91 (empty -> .)
    IF              reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    RBRACES         reduce using rule 91 (empty -> .)
    RBRACKETS       reduce using rule 91 (empty -> .)
    COMMA           reduce using rule 91 (empty -> .)
    RPARENTESIS     reduce using rule 91 (empty -> .)
    SEMICOLON       reduce using rule 91 (empty -> .)

    add_sub                        shift and go to state 89
    empty                          shift and go to state 92

state 62

    (52) term -> factor . mult_div
    (53) mult_div -> . TIMES add_op factor mult_div
    (54) mult_div -> . DIVIDE add_op factor mult_div
    (55) mult_div -> . empty
    (91) empty -> .

    TIMES           shift and go to state 94
    DIVIDE          shift and go to state 95
    PLUS            reduce using rule 91 (empty -> .)
    MINUS           reduce using rule 91 (empty -> .)
    GREATER         reduce using rule 91 (empty -> .)
    LESS            reduce using rule 91 (empty -> .)
    DIFFERENT       reduce using rule 91 (empty -> .)
    STRICT_EQUAL    reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    LBRACKETS       reduce using rule 91 (empty -> .)
    PRINT           reduce using rule 91 (empty -> .)
    IF              reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    RBRACES         reduce using rule 91 (empty -> .)
    RBRACKETS       reduce using rule 91 (empty -> .)
    COMMA           reduce using rule 91 (empty -> .)
    RPARENTESIS     reduce using rule 91 (empty -> .)
    SEMICOLON       reduce using rule 91 (empty -> .)
